--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="page-title">Stadthavet AIS Sporing</title>
+
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:title" content="Stadthavet AIS Sporing - Skipstrafikk over Stad" />
+    <meta property="og:description" content="Sporing av skipstrafikk som passerer Stad-halvøya. Viser kryssingar, ventehendingar og vêrforhold basert på AIS-data frå Barentswatch og vinddata frå met.no." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://stad.bringsvor.com" />
+    <meta property="og:image" content="https://stad.bringsvor.com/static/og-image.png" />
+    <meta name="description" content="Sporing av skipstrafikk som passerer Stad-halvøya. Viser kryssingar, ventehendingar og vêrforhold." />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Stadthavet AIS Sporing" />
+    <meta name="twitter:description" content="Sporing av skipstrafikk som passerer Stad-halvøya. Viser kryssingar, ventehendingar og vêrforhold." />
+    <meta name="twitter:image" content="https://stad.bringsvor.com/static/og-image.png" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
